--- a/capstoneProject/MD/app/src/main/res/layout/card_quick_tips.xml
+++ b/capstoneProject/MD/app/src/main/res/layout/card_quick_tips.xml
@@ -8,6 +8,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:cardBackgroundColor="@color/card"
+        app:strokeWidth="0dp"
         android:layout_margin="8dp">
         <LinearLayout
             android:layout_width="match_parent"
