--- a/capstoneProject/MD/app/src/main/res/layout/activity_result.xml
+++ b/capstoneProject/MD/app/src/main/res/layout/activity_result.xml
@@ -161,6 +161,7 @@
         android:fontFamily="@font/gentium_basic"
         android:text="@string/article"
         android:textSize="20sp"
+        android:paddingBottom="8dp"
         android:textStyle="bold"
         android:textColor="@color/title"
         android:layout_marginTop="16dp"
@@ -170,12 +171,28 @@
         app:layout_constraintTop_toBottomOf="@+id/tips_card" />
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rv_history"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
+        android:id="@+id/rv_articles"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:overScrollMode="never"
+        android:scrollbarSize="0dp"
         android:layout_marginHorizontal="20dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/article_title"
+        app:layout_constraintBottom_toBottomOf="parent"
         tools:listitem="@layout/card_news" />
+
+    <ProgressBar
+        android:id="@+id/progressBar"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:visibility="visible" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
