--- a/capstoneProject/MD/app/src/main/res/layout/activity_result.xml
+++ b/capstoneProject/MD/app/src/main/res/layout/activity_result.xml
@@ -9,7 +9,6 @@
     android:paddingTop="20dp"
     tools:context=".ui.result.ResultActivity">
 
-
     <ImageView
         android:id="@+id/btn_back"
         android:layout_width="wrap_content"
@@ -42,6 +41,8 @@
         android:layout_marginHorizontal="30dp"
         android:layout_marginTop="23dp"
         android:orientation="horizontal"
+        android:alpha="0"
+        tools:alpha="100"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/result">
@@ -80,6 +81,8 @@
         android:textSize="20sp"
         android:textStyle="bold"
         android:layout_marginHorizontal="30dp"
+        android:alpha="0"
+        tools:alpha="100"
         app:layout_constraintEnd_toEndOf="@+id/stuntBar"
         app:layout_constraintStart_toStartOf="@+id/stuntBar"
         app:layout_constraintTop_toBottomOf="@+id/stuntBar" />
@@ -95,6 +98,8 @@
         android:textAlignment="textStart"
         android:textColor="@color/black"
         android:textSize="16sp"
+        android:alpha="0"
+        tools:alpha="100"
         app:layout_constraintEnd_toEndOf="@+id/stuntResult"
         app:layout_constraintStart_toStartOf="@+id/stuntResult"
         app:layout_constraintTop_toBottomOf="@+id/stuntResult" />
@@ -111,6 +116,8 @@
         android:textColor="@color/title"
         android:textSize="20sp"
         android:textStyle="bold"
+        android:alpha="0"
+        tools:alpha="100"
         app:layout_constraintEnd_toEndOf="@+id/stuntDisclaimer"
         app:layout_constraintStart_toStartOf="@+id/stuntDisclaimer"
         app:layout_constraintTop_toBottomOf="@+id/stuntDisclaimer" />
@@ -123,6 +130,8 @@
         android:layout_marginTop="8dp"
         app:strokeWidth="0dp"
         app:cardBackgroundColor="@color/card"
+        android:alpha="0"
+        tools:alpha="100"
         app:layout_constraintEnd_toEndOf="@+id/tips_title"
         app:layout_constraintStart_toStartOf="@+id/tips_title"
         app:layout_constraintTop_toBottomOf="@+id/tips_title">
@@ -132,7 +141,8 @@
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:paddingHorizontal="16dp"
-            android:paddingVertical="8dp">
+            android:paddingVertical="8dp"
+            >
 
             <TextView
                 android:layout_width="wrap_content"
@@ -166,6 +176,8 @@
         android:textColor="@color/title"
         android:layout_marginTop="16dp"
         android:layout_marginHorizontal="30dp"
+        android:alpha="0"
+        tools:alpha="100"
         app:layout_constraintEnd_toEndOf="@+id/tips_card"
         app:layout_constraintStart_toStartOf="@+id/tips_card"
         app:layout_constraintTop_toBottomOf="@+id/tips_card" />
@@ -178,21 +190,27 @@
         android:scrollbarSize="0dp"
         android:layout_marginHorizontal="20dp"
         app:layout_constraintEnd_toEndOf="parent"
+        android:alpha="0"
+        tools:alpha="100"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/article_title"
         app:layout_constraintBottom_toBottomOf="parent"
         tools:listitem="@layout/card_news" />
 
-    <ProgressBar
+    <!-- Lottie Animation -->
+    <com.airbnb.lottie.LottieAnimationView
         android:id="@+id/progressBar"
-        style="?android:attr/progressBarStyle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
         android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:visibility="visible" />
+        app:lottie_rawRes="@raw/baby_animation"
+        app:lottie_autoPlay="true"
+        app:lottie_loop="true"
+        tools:visibility="visible"/>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
